--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
-  <h1>Lueken's Portfolio</h1>
-  <iframe width="410" height="460"
-   src="https://academy.cs.cmu.edu/sharing/khakiElephant7446/embed"> 
- </iframe>
+  <style>
+    h1 {text-align: center;}
+  </style>
+
+  <body>
+    <h1>Lueken's Portfolio</h1>
+    <h2>Future Software Developer | Project-Driven, Team-Focused</h2>
+    <iframe width="410" height="460"
+     src="https://academy.cs.cmu.edu/sharing/khakiElephant7446/embed"> 
+    </iframe>
+  </body>
   
 </html>
