--- a/index.html
+++ b/index.html
@@ -112,12 +112,41 @@
     <div class="projects">
 
       <!-- Project 1 -->
-      <div class="project">
-        <h3>Project 1: Elephant Escape</h3>
-        <iframe src="https://academy.cs.cmu.edu/sharing/khakiElephant7446/embed"></iframe>
-        <p>A fun, interactive Python game created in CMU Academy. Built with loops, conditionals, and user input to simulate an elephant escaping a maze.</p>
-        <!-- <img src="your_screenshot_url_here.png" alt="Code Screenshot" class="screenshot"> -->
-      </div>
+<div class="project">
+  <h3>Project 1: Road Rush</h3>
+
+  <!-- Game Embed -->
+  <iframe src="https://academy.cs.cmu.edu/sharing/tealCamel7036/embed" width="100%" height="300"></iframe>
+
+  <!-- Description -->
+  <p>
+    In Road Rush, players use arrow keys to control a car driving down a busy road. The game keeps the car within boundaries and increases the score the longer you avoid hitting other cars. It simulates traffic by randomly generating cars and features real-time user input with smooth, responsive controls.
+  </p>
+
+  <!-- Concepts Learned -->
+  <p><strong>Concepts Learned:</strong> for loops, object creation with Rect, random positioning, input handling with <code>onKeyHold()</code>, collision avoidance, and movement constraints.</p>
+
+  <!-- Code Block 1: Generating Cars -->
+  <pre style="background-color:#f4f4f4;padding:1rem;border-radius:8px;overflow-x:auto;">
+<code>for i in range(5):
+    cars.add(Rect(random.randrange(400, 2000), 
+                  random.randrange(250, 320), 
+                  30, 20, fill='red'))</code>
+  </pre>
+
+  <!-- Code Block 2: Movement Handling -->
+  <pre style="background-color:#f4f4f4;padding:1rem;border-radius:8px;overflow-x:auto;">
+<code>def onKeyHold(keys):
+    if 'up' in keys and car.top > 250:
+        car.centerY -= cars.speed
+    if 'left' in keys and car.left > 0:
+        car.centerX -= cars.speed    
+    if 'right' in keys and car.right < 400:
+        car.centerX += cars.speed    
+    if 'down' in keys and car.bottom < 350:
+        car.centerY += cars.speed</code>
+  </pre>
+</div>
 
       <!-- Placeholder Projects 2–6 -->
       <div class="project">
